--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -23,15 +23,15 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
       
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
         with:
           push: true
           tags: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/certbot-cron:latest
+            ${{ secrets.DOCKER_USERNAME }}/certbot-cron:latest
           platforms: linux/amd64,linux/arm64
       
       - name: Create empty commit to keep repo alive
