--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -17,16 +17,28 @@ jobs:
         with:
           fetch-depth: 0
       
+      - name: Check for changes
+        id: check_changes
+        run: |
+          if git diff --quiet HEAD~1 HEAD; then
+            echo "changed=false" >> $GITHUB_OUTPUT
+          else
+            echo "changed=true" >> $GITHUB_OUTPUT
+          fi
+      
       - name: Set up Docker Buildx
+        if: steps.check_changes.outputs.changed == 'true'
         uses: docker/setup-buildx-action@v2        
       
       - name: Log in to Docker Hub
+        if: steps.check_changes.outputs.changed == 'true'
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       
       - name: Build and push Docker image
+        if: steps.check_changes.outputs.changed == 'true'
         uses: docker/build-push-action@v4
         with:
           push: true
